SimpleComplex/Config 1.x, 2018-06-19
------------------------------------
- Use Utils PathList instead of deprecated predecessor.
- Release 1.4.

SimpleComplex/Config 1.x, 2018-04-07
------------------------------------
- Package requires Utils package ^1.2.
- CLI config-set option 'array' (-r) to set 'json' (object) value as array.
- Release 1.3.

SimpleComplex/Config 1.x, 2018-03-26
------------------------------------
- Sectioned config interface now extends the Utils package's general use
  sectioned hashmap interface to avoid forcing dependency of this package
  when not strictly required.

SimpleComplex/Config 1.x, 2017-10-10
------------------------------------
- .ini sectioned flat config support long cache keys.
- Release 1.2.

SimpleComplex/Config 1.x, 2017-10-03
------------------------------------
- Fix that (sectioned config) empty section must be object, not array;
  PHP json_encode() encodes empty array as array, even in non-assoc mode.
- Release 1.1.1.

SimpleComplex/Config 1.x, 2017-09-24
------------------------------------
- Release 1.1.

SimpleComplex/Config 1.x, 2017-09-22
------------------------------------
- Major bug fix: eliminated risk of dupe key scalar values become array.
  Removed warnings from .ini-files' documentation.

SimpleComplex/Config 1.x, 2017-09-02
------------------------------------
- ConfigKey accommodated to fit altered Cache\CacheKey.
- Interfaces moved to sub dir/namespace.

SimpleComplex/Config 1.x, 2017-08-30
------------------------------------
- README supposedly complete.

SimpleComplex/Config 1.x, 2017-08-27
------------------------------------
- Cache store name prefix is now 'config.'; was 'config_'.
- New CLI command config-list-stores.

SimpleComplex/Config 1.x, 2017-08-24
------------------------------------
- CLI commands must respect new command 'silent' property.
- CLI 'get' command default to print instead default to return the value.

SimpleComplex/Config 1.x, 2017-08-23