@@ -1,3 +1,9 @@
+SimpleComplex/Config 1.x, 2018-06-23
+------------------------------------
+- Competing associative keys (and sub-keys) both having non-array value
+  within same ini path (base, override) is now illegal; because there can't
+  be any guarantee that the same value will 'win' on every config refresh.
+
 SimpleComplex/Config 1.x, 2018-06-19
 ------------------------------------
 - Use Utils PathList instead of deprecated predecessor.
